# face_recognition_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
launch/: sample.launch
python/face_recognition_ros/: core.py
scripts/: face_classifier.py
